--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -23,28 +23,45 @@ tile.smedry:glassSun.name=Eyeburner's Glass [WIP]
 tile.smedry:glassView.name=Communicator's Glass [WIP]
 
 item.smedry:lensDull.name=Glass Lens
-item.smedry:lensRashid.name=Translator's Lens
-item.smedry:lensBright.name=Oculator's Lens
-item.smedry:lensHeat.name=Firebringer's Lens
-item.smedry:lensStorm.name=Windstormer's Lens
-item.smedry:lensVoid.name=Voidstormer's Lens
-item.smedry:lensTrail.name=Tracker's Lens
-item.smedry:lensBlood.name=Warrior's Lens
-item.smedry:lensPain.name=Torturer's Lens
-item.smedry:lensSun.name=Shocker's Lens
-item.smedry:lensView.name=Courier's Lens
-
-
 item.smedry:lensDull.plural.name=Glass Lenses
-item.smedry:lensRashid.plural.name=Translator's Lenses
-item.smedry:lensBright.plural.name=Oculator's Lenses
-item.smedry:lensHeat.plural.name=Firebringer's Lenses
+
+item.smedry:lensRashid.name=Translator's Lens [WIP]
+item.smedry:lensRashid.plural.name=Translator's Lenses [WIP]
+
+item.smedry:lensBright.name=Oculator's Lens [WIP]
+item.smedry:lensBright.plural.name=Oculator's Lenses [WIP]
+
+item.smedry:lensHeat.name=Firebringer's Lens [WIP]
+item.smedry:lensHeat.plural.name=Firebringer's Lenses [WIP]
+
+item.smedry:lensStorm.name=Windstormer's Lens
 item.smedry:lensStorm.plural.name=Windstormer's Lenses
+smedry.lens.windstormer.desc1=When focusing, it pushes anything near your gaze back.
+smedry.lens.windstormer.desc2=Using one will push you back slightly.
+
+item.smedry:lensVoid.name=Voidstormer's Lens
 item.smedry:lensVoid.plural.name=Voidstormer's Lenses
-item.smedry:lensTrail.plural.name=Tracker's Lenses
+smedry.lens.voidstormer.desc1=When focusing, it pulls anything near your gaze towards you.
+smedry.lens.voidstormer.desc2=Using one will pull you forwards slightly.
+
+item.smedry:lensTrail.name=Tracker's Lens [WIP]
+item.smedry:lensTrail.plural.name=Tracker's Lenses [WIP]
+
+item.smedry:lensBlood.name=Warrior's Lens
 item.smedry:lensBlood.plural.name=Warrior's Lenses
+
+item.smedry:lensPain.name=Torturer's Lens
 item.smedry:lensPain.plural.name=Torturer's Lenses
+smedry.lens.torturer.desc1=When focusing, it causes intense pain to the target.
+smedry.lens.torturer.desc2=If your gaze wavers, its damage is less effective.
+
+item.smedry:lensSun.name=Shocker's Lens
 item.smedry:lensSun.plural.name=Shocker's Lenses
-item.smedry:lensView.plural.name=Courier's Lenses
+smedry.lens.shocker.desc1=When focusing, it builds up power. When released,
+smedry.lens.shocker.desc2=anyone looking at you is knocked out by the lens.
+
+item.smedry:lensView.name=Courier's Lens [WIP]
+item.smedry:lensView.plural.name=Courier's Lenses [WIP]
+
 
 item.smedry:lensFrames.name=Lens Frames
