i'm in pane from all these panes

--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -1,16 +1,27 @@
 tile.smedry:sandDull.name=Dullsand
+item.smedry:dustSandDull.name=Pile of Dullsand
 tile.smedry:sandRashid.name=Sands of Rashid
+item.smedry:dustSandRashid.name=Piled Sands of Rashid
 tile.smedry:sandBright.name=Brightsand
+item.smedry:dustSandBright.name=Pile of Brightsand
 tile.smedry:sandHeat.name=Heatsand
+item.smedry:dustSandHeat.name=Pile of Heatsand
 tile.smedry:sandStorm.name=Stormsand
+item.smedry:dustSandStorm.name=Pile of Stormsand
 tile.smedry:sandVoid.name=Voidsand
+item.smedry:dustSandVoid.name=Pile of Voidsand
 tile.smedry:sandTrail.name=Trailsand
+item.smedry:dustSandTrail.name=Pile of Trailsand
 tile.smedry:sandBlood.name=Bloodsand
+item.smedry:dustSandBlood.name=Pile of Bloodsand
 tile.smedry:sandPain.name=Painsand
+item.smedry:dustSandPain.name=Pile of Painsand
 tile.smedry:sandSun.name=Sunsand
-tile.smedry:sandView.name=Viewsand
+item.smedry:dustSandSun.name=Pile of Sunsand
+tile.smedry:sandView.name=Vistasand
+item.smedry:dustSandView.name=Pile of Vistasand
 
-tile.smedry:glassDull.name=Dull Glass
+tile.smedry:glassDull.name=Dullglass
 tile.smedry:glassRashid.name=Glass of Rashid
 tile.smedry:glassBright.name=Empowerer's Glass
 tile.smedry:glassHeat.name=Detonator's Glass [WIP]
@@ -21,6 +32,18 @@ tile.smedry:glassBlood.name=Gladiator's Glass
 tile.smedry:glassPain.name=Shardstepper's Glass
 tile.smedry:glassSun.name=Eyeburner's Glass [WIP]
 tile.smedry:glassView.name=Communicator's Glass [WIP]
+
+tile.smedry:glassPaneDull.name=Dullglass Pane
+tile.smedry:glassPaneRashid.name=Pane of Rashid
+tile.smedry:glassPaneBright.name=Empowerer's Glass Pane
+tile.smedry:glassPaneHeat.name=Detonator's Glass Pane [WIP]
+tile.smedry:glassPaneStorm.name=Pressurizer's Glass Pane
+tile.smedry:glassPaneVoid.name=Inhaler's Glass Pane
+tile.smedry:glassPaneTrail.name=Grappler's Glass Pane [WIP]
+tile.smedry:glassPaneBlood.name=Gladiator's Glass Pane
+tile.smedry:glassPanePain.name=Shardstepper's Glass Pane
+tile.smedry:glassPaneSun.name=Eyeburner's Glass Pane [WIP]
+tile.smedry:glassPaneView.name=Communicator's Glass Pane [WIP]
 
 item.smedry:lensDull.name=Glass Lens
 item.smedry:lensDull.plural.name=Glass Lenses
