--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -55,7 +55,7 @@ item.smedry:lensBright.name=Oculator's Lens [WIP]
 item.smedry:lensBright.plural.name=Oculator's Lenses [WIP]
 
 item.smedry:lensHeat.name=Firebringer's Lens [WIP]
-item.smedry:lensHeat.plural.name=Firebringer's Lenses [WIP]
+item.smedry:lensHeat.plural.name=Firebringer's Lenses
 
 item.smedry:lensStorm.name=Windstormer's Lens
 item.smedry:lensStorm.plural.name=Windstormer's Lenses
