--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -111,6 +111,8 @@ smedry.lens.debugger.desc=Note: Not actually a lens
 
 itemGroup.smedry=Silimatics
 
+smedry.subtitle.woosh=Wind wooshes
+
 smedry.potion.disoriented=Disorientation
 
 jei.smedry.recipe.sifting=Sand Sifting
