--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -74,7 +74,7 @@ smedry.lens.voidstormer.desc2=Using one will pull you forwards slightly.
 
 item.smedry:lensTrail.name=Tracker's Lens
 item.smedry:lensTrail.plural.name=Tracker's Lenses
-smedry.lens.tracker.desc1=Through it you can see the last half minute of any player's
+smedry.lens.tracker.desc1=Through it you can see the trail of any player's
 smedry.lens.tracker.desc2=location. Different players have different color trails.
 
 item.smedry:lensBlood.name=Warrior's Lens
