Removed heartsand function, changed heartglass color to be gray (it will be changed to "restorer's glass"), made bestower lens also give jump boost 2 to their target and remove the activator's ability to jump. Replaced slowness/jump boost with new Rooted effect, made bestower lens give haste 2 to their target and mining fatigue to the activator

--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -128,6 +128,7 @@ itemGroup.smedry=Silimatics
 smedry.subtitle.woosh=Wind wooshes
 
 smedry.potion.disoriented=Disorientation
+smedry.potion.rooted=Rooted
 
 jei.smedry.recipe.sifting=Sand Sifting
 jei.smedry.recipe.grinding=Lens Grinding
