--- a/src/main/resources/assets/smedry/lang/en_US.lang
+++ b/src/main/resources/assets/smedry/lang/en_US.lang
@@ -24,6 +24,8 @@ tile.smedry:sandHeart.name=Heartsand
 item.smedry:dustSandHeart.name=Pile of Heartsand
 tile.smedry:sandSchool.name=Schoolsand
 item.smedry:dustSandSchool.name=Pile of Schoolsand
+tile.smedry:sandLinker.name=Linkersand
+item.smedry:dustSandLinker.name=Pile of Linkersand
 
 tile.smedry:glassDull.name=Dullglass
 tile.smedry:glassRashid.name=Glass of Rashid
@@ -38,6 +40,7 @@ tile.smedry:glassSun.name=Eyeburner's Glass
 tile.smedry:glassView.name=Communicator's Glass
 tile.smedry:glassHeart.name=Restorer's Glass
 tile.smedry:glassSchool.name=Scholar's Glass
+tile.smedry:glassLinker.name=Transporter's Glass
 
 tile.smedry:glassPaneDull.name=Dullglass Pane
 tile.smedry:glassPaneRashid.name=Pane of Rashid
@@ -52,6 +55,7 @@ tile.smedry:glassPaneSun.name=Eyeburner's Glass Pane
 tile.smedry:glassPaneView.name=Communicator's Glass Pane
 tile.smedry:glassPaneHeart.name=Restorer's Glass Pane
 tile.smedry:glassPaneSchool.name=Scholar's Glass Pane
+tile.smedry:glassPaneLinker.name=Transporter's Glass Pane
 
 item.smedry:lensDull.name=Glass Lens
 item.smedry:lensDull.plural.name=Glass Lenses
@@ -113,6 +117,11 @@ smedry.lens.lensHeart.desc3=the player will get some of your strength.
 item.smedry:lensSchool.name=Scholar's Lens
 item.smedry:lensSchool.plural.name=Scholar's Lenses
 smedry.lens.lensSchool.desc=Allows you to slow down time and motion for yourself and other nearby entities
+
+item.smedry:lensLinker.name=Showstopper's Lens
+item.smedry:lensLinker.plural.name=Showstopper's Lenses
+smedry.lens.linker.desc1=Allows you to brainwash and control
+smedry.lens.linker.desc2=nearby mobs to shift their attention from you
 
 item.smedry:lensFrames.name=Lens Frames
 
